--- a/soccer.html
+++ b/soccer.html
@@ -97,92 +97,92 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Elche vs Girona</a>
 <td>December 07, 2025 05:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 03:30:00" data-start="December 06, 2025 04:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 04:00:00" data-start="December 07, 2025 05:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Brighton vs West Ham</a>
 <td>December 07, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 03:30:00" data-start="December 06, 2025 04:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 05:00:00" data-start="December 07, 2025 06:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Nice vs Angers</a>
 <td>December 07, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 03:30:00" data-start="December 06, 2025 04:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 05:00:00" data-start="December 07, 2025 06:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Cagliari vs Roma</a>
 <td>December 07, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 04:00:00" data-start="December 06, 2025 05:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 05:00:00" data-start="December 07, 2025 06:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Hamburger SV vs Werder Bremen</a>
 <td>December 07, 2025 06:30 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 05:30:00" data-start="December 06, 2025 06:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 05:30:00" data-start="December 07, 2025 06:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Celtic vs Hearts</a>
-<td>December 0607 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<td>December 07, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 08, 2025 06:00:00" data-start="December 07, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Valencia vs Sevilla</a>
 <td>December 07, 2025 07:15 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 06:15:00" data-start="December 07, 2025 07:15:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Le Havre vs Paris</a>
 <td>December 07, 2025 08:15 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 07:15:00" data-start="December 07, 2025 08:15:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Dortmund vs Hoffenheim</a>
 <td>December 07, 2025 08:30 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 07:30:00" data-start="December 07, 2025 08:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Fulham vs Crystal Palace</a>
 <td>December 07, 2025 08:30 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 07:30:00" data-start="December 07, 2025 08:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Lazio vs Bologna</a>
 <td>December 07, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 08:00:00" data-start="December 07, 2025 09:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Espanyol vs Rayo Vallecano</a>
 <td>December 07, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 08:30:00" data-start="December 07, 2025 09:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">Botafogo vs Fortaleza</a>
 <td>December 07, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 06:15:00" data-start="December 06, 2025 07:15:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 10:00:00" data-start="December 07, 2025 11:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-8">Corinthians vs Juventude</a>
 <td>December 07, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 07:00:00" data-start="December 06, 2025 08:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 10:00:00" data-start="December 07, 2025 11:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-9">Ceará vs Palmeiras</a>
 <td>December 07, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 08:00:00" data-start="December 06, 2025 09:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 10:00:00" data-start="December 07, 2025 11:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-10">Fluminense vs Bahia</a>
 <td>December 07, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 08:30:00" data-start="December 06, 2025 09:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 10:00:00" data-start="December 07, 2025 11:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-11">Vitória vs São Paulo</a>
 <td>December 07, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 08:30:00" data-start="December 06, 2025 09:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 10:00:00" data-start="December 07, 2025 11:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-12">Santos vs Cruzeiro</a>
 <td>December 07, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 08:30:00" data-start="December 06, 2025 09:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 10:00:00" data-start="December 07, 2025 11:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-13">Napoli vs Juventus</a>
 <td>December 07, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 09:00:00" data-start="December 06, 2025 10:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 10:45:00" data-start="December 07, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Lorient vs Lyon</a>
 <td>December 07, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 10:30:00" data-start="December 06, 2025 11:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 10:45:00" data-start="December 07, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Real Madrid vs Celta Vigo</a>
 <td>December 07, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 10:45:00" data-start="December 06, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="December 08, 2025 11:00:00" data-start="December 07, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-14">Boca Juniors vs Racing Club</a>
 <td>December 07, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="December 07, 2025 11:00:00" data-start="December 06, 2025 12:00:00"></span></td>
-<tr></tbody></table>
+<td><span class="countdown-timer" data-end="December 08, 2025 13:00:00" data-start="December 07, 2025 14:00:00"></span></td>
+<tr></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
