--- a/nfl.html
+++ b/nfl.html
@@ -120,113 +120,6 @@
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
      Upcoming NCAA Events
     </h2>
-    <table id="eventsTable">
-     <thead>
-      <tr>
-       <th>
-        Event
-       </th>
-       <th>
-        Start Time
-       </th>
-       <th>
-        Countdown
-       </th>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/ncaa-streams-1">
-         BYU vs Texas Tech
-        </a>
-        <td>
-         December 06, 2025 09:00 AM
-        </td>
-        <td>
-         <span class="countdown-timer" data-end="December 07, 2025 08:00:00" data-start="December 06, 2025 09:00:00">
-         </span>
-        </td>
-        <tr>
-         <td>
-          <a href="https://roxiestreams.live/ncaa-streams-2">
-           Miami (Ohio) vs Western Michigan
-          </a>
-          <td>
-           December 06, 2025 09:00 AM
-          </td>
-          <td>
-           <span class="countdown-timer" data-end="December 07, 2025 08:00:00" data-start="December 06, 2025 09:00:00">
-           </span>
-          </td>
-          <tr>
-           <td>
-            <a href="https://roxiestreams.live/ncaa-streams-3">
-             Prairie View A&amp;M vs Jackson State
-            </a>
-            <td>
-             December 06, 2025 11:00 AM
-            </td>
-            <td>
-             <span class="countdown-timer" data-end="December 07, 2025 10:00:00" data-start="December 06, 2025 11:00:00">
-             </span>
-            </td>
-            <tr>
-             <td>
-              <a href="https://roxiestreams.live/ncaa-streams-1">
-               Georgia vs Alabama
-              </a>
-              <td>
-               December 06, 2025 13:00 PM
-              </td>
-              <td>
-               <span class="countdown-timer" data-end="December 07, 2025 12:00:00" data-start="December 06, 2025 13:00:00">
-               </span>
-              </td>
-              <tr>
-               <td>
-                <a href="https://roxiestreams.live/ncaa-streams-5">
-                 Indiana vs Ohio State
-                </a>
-                <td>
-                 December 06, 2025 17:00 PM
-                </td>
-                <td>
-                 <span class="countdown-timer" data-end="December 07, 2025 16:00:00" data-start="December 06, 2025 17:00:00">
-                 </span>
-                </td>
-                <tr>
-                 <td>
-                  <a href="https://roxiestreams.live/ncaa-streams-1">
-                   Duke vs Virginia
-                  </a>
-                  <td>
-                   December 06, 2025 17:00 PM
-                  </td>
-                  <td>
-                   <span class="countdown-timer" data-end="December 07, 2025 16:00:00" data-start="December 06, 2025 17:00:00">
-                   </span>
-                  </td>
-                  <tr>
-                  </tr>
-                 </td>
-                </tr>
-               </td>
-              </tr>
-             </td>
-            </tr>
-           </td>
-          </tr>
-         </td>
-        </tr>
-       </td>
-      </tr>
-     </tbody>
-    </table>
-   </div>
-   <h2>
-    NFL Schedule for Sunday, December 7, 2025
-   </h2>
    <table id="eventsTable">
     <thead>
      <tr>
@@ -242,6 +135,23 @@
      </tr>
     </thead>
     <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/redzone">
+        NFL RedZone
+       </a>
+      </td>
+      <td>
+       December 07, 2025 10:00 AM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+
      <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-1">
