--- a/index.html
+++ b/index.html
@@ -118,44 +118,29 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/f1-streams">Formula 1</td>
-                    <td>December 06, 2025 02:30 AM</td>
-                    <td><span class="countdown-timer" data-start="December 06, 2025 02:30:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/f1-streams">Formula 1: Grand Prix</td>
+                    <td>December 07, 2025 05:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 07, 2025 05:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/soccer-streams-1">Laliga</td>
+                    <td>December 07, 2025 05:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 07, 2025 05:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/soccer">Premier League</td>
-                    <td>December 06, 2025 04:30 AM</td>
-                    <td><span class="countdown-timer" data-start="December 06, 2025 04:30:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td>December 07, 2025 06:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 07, 2025 06:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-4">Laliga</td>
-                    <td>December 06, 2025 05:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 06, 2025 05:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl">NFL Week 14</td>
+                    <td>December 07, 2025 10:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 07, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football)</td>
-                    <td>December 06, 2025 09:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 06, 2025 09:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-16">MLS Cup</td>
-                    <td>December 05, 2025 11:30 AM</td>
-                    <td><span class="countdown-timer" data-start="December 06, 2025 11:30:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/ppv-streams-1">CRUZ vs ROACH</td>
-                    <td>December 06, 2025 14:30 PM</td>
-                    <td><span class="countdown-timer" data-start="December 06, 2025 14:30:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT Deadline</td>
-                    <td>December 06, 2025 15:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 06, 2025 15:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/ufc">UFC 323: Dvalishvili vs Yan 2</td>
-                    <td>December 06, 2025 15:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 06, 2025 15:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer">Brasileirão</td>
+                    <td>December 07, 2025 11:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 07, 2025 11:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
