--- a/soccer-streams-11.html
+++ b/soccer-streams-11.html
@@ -97,8 +97,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.shadow-ran.online/f1alt.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil07.wnion.co.in/mancity.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil07.wnion.co.in/prem.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -133,7 +132,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://600.shadow-ran.online/f1alt.m3u8');
+            showPlayer('clappr', 'https://daffodil07.wnion.co.in/prem.m3u8');
         };
     </script>
     <script>
