--- a/soccer-streams-8.html
+++ b/soccer-streams-8.html
@@ -97,7 +97,7 @@ g<!DOCTYPE html>
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoxe8a5a7g4h.com/cor.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://enyr.envivotv.live/hotflix/fanatiz3/index.m3u8?token=a12b7651b5bef6d37f81abbadc789f02877232c4-ae86bb02bb4a8e898b59c106c0670ec4-1765145006-1765134206&remote=82.102.31.157')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -132,7 +132,7 @@ g<!DOCTYPE html>
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://601.xn--1000-ugoxe8a5a7g4h.com/cor.m3u8');
+            showPlayer('clappr', 'https://enyr.envivotv.live/hotflix/fanatiz3/index.m3u8?token=a12b7651b5bef6d37f81abbadc789f02877232c4-ae86bb02bb4a8e898b59c106c0670ec4-1765145006-1765134206&remote=82.102.31.157');
         };
     </script>
     <script>
