--- a/supercross.html
+++ b/supercross.html
@@ -97,7 +97,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoxe8a5a7g4h.com/sx.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil07.wnion.co.in/sx.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -132,7 +132,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://601.xn--1000-ugoxe8a5a7g4h.com/sx.m3u8');
+            showPlayer('clappr', 'https://daffodil07.wnion.co.in/sx.m3u8');
         };
     </script>
     <script>
