--- a/soccer.html
+++ b/soccer.html
@@ -143,14 +143,6 @@
 <td>December 07, 2025 09:30 AM</td>
 <td><span class="countdown-timer" data-end="December 08, 2025 08:30:00" data-start="December 07, 2025 09:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Botafogo vs Fortaleza</a>
-<td>December 07, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 08, 2025 10:00:00" data-start="December 07, 2025 11:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Corinthians vs Juventude</a>
-<td>December 07, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 08, 2025 10:00:00" data-start="December 07, 2025 11:00:00"></span></td>
-<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-9">Ceará vs Palmeiras</a>
 <td>December 07, 2025 11:00 AM</td>
 <td><span class="countdown-timer" data-end="December 08, 2025 10:00:00" data-start="December 07, 2025 11:00:00"></span></td>
@@ -177,8 +169,7 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-14">Boca Juniors vs Racing Club</a>
 <td>December 07, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="December 08, 2025 13:00:00" data-start="December 07, 2025 14:00:00"></span></td>
-<tr></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<td><span class="countdown-timer" data-end="December 08, 2025 13:00:00" data-start="December 07, 2025 14:00:00"></span></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
