--- a/nfl.html
+++ b/nfl.html
@@ -102,8 +102,13 @@
        </a>
       </li>
       <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/motorsports">
-        Motorsports
+       <a class="nav-link" href="https://roxiestreams.live/fighting">
+        Fighting
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/nhl">
+        NHL
        </a>
       </li>
       <li class="nav-item">
