--- a/nba.html
+++ b/nba.html
@@ -97,6 +97,11 @@
        </a>
       </li>
       <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/nhl">
+        NHL
+       </a>
+      </li>
+      <li class="nav-item">
        <a class="nav-link" href="https://roxiestreams.live/fighting">
         Fighting
        </a>
