--- a/nhl.html
+++ b/nhl.html
@@ -134,6 +134,31 @@
             <td><a href="https://roxiestreams.live/nhl-streams-8">Chicago Blackhawks vs Anaheim Ducks</a></td>
             <td>December 07, 2025 05:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-08 17:00:00" data-start="2025-12-07 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Tampa Bay Lightning vs Toronto Maple Leafs</a></td>
+            <td>December 08, 2025 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-09 16:30:00" data-start="2025-12-08 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Los Angeles Kings vs Utah Mammoth</a></td>
+            <td>December 08, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-09 18:00:00" data-start="2025-12-08 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-11">Buffalo Sabres vs Calgary Flames</a></td>
+            <td>December 08, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-09 18:00:00" data-start="2025-12-08 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-12">Detroit Red Wings vs Vancouver Canucks</a></td>
+            <td>December 08, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-09 19:00:00" data-start="2025-12-08 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-13">Minnesota Wild vs Seattle Kraken</a></td>
+            <td>December 08, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-09 19:00:00" data-start="2025-12-08 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
