--- a/soccer.html
+++ b/soccer.html
@@ -77,7 +77,6 @@
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
-
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
 <li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
@@ -99,17 +98,17 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Torino vs Milan</a>
 <td>December 08, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 08, 2025 04:00:00" data-start="December 07, 2025 05:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 09, 2025 10:45:00" data-start="December 08, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Osasuna vs Levante</a>
 <td>December 08, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 08, 2025 05:00:00" data-start="December 07, 2025 06:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 09, 2025 10:45:00" data-start="December 08, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Wolves vs Manchester United</a>
 <td>December 08, 2025 12:00 AM</td>
-<td><span class="countdown-timer" data-end="December 08, 2025 05:00:00" data-start="December 07, 2025 06:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 09, 2025 11:00:00" data-start="December 08, 2025 12:00:00"></span></td>
 <tr>
-</div>
+</tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
