--- a/nfl.html
+++ b/nfl.html
@@ -107,6 +107,11 @@
        </a>
       </li>
       <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/motorsports">
+        Motorsports
+       </a>
+      </li>
+      <li class="nav-item">
        <a class="nav-link" href="https://discord.gg/JhkVmejRmn">
         Stream Request (Discord)
        </a>
@@ -119,208 +124,6 @@
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
      Upcoming NFL Events
-    </h2>
-    <table id="eventsTable">
-     <thead>
-      <tr>
-       <th>
-        Event
-       </th>
-       <th>
-        Start Time
-       </th>
-       <th>
-        Countdown
-       </th>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/redzone">
-         NFL RedZone
-        </a>
-       </td>
-       <td>
-        December 07, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-1">
-         Seattle Seahawks vs Atlanta Falcons
-        </a>
-       </td>
-       <td>
-        December 07, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-2">
-         Cincinnati Bengals vs Buffalo Bills
-        </a>
-       </td>
-       <td>
-        December 07, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-3">
-         Tennessee Titans vs Cleveland Browns
-        </a>
-       </td>
-       <td>
-        December 07, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-4">
-         Washington Commanders vs Minnesota Vikings
-        </a>
-       </td>
-       <td>
-        December 07, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-5">
-         Miami Dolphins vs New York Jets
-        </a>
-       </td>
-       <td>
-        December 07, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-6">
-         New Orleans Saints vs Tampa Bay Buccaneers
-        </a>
-       </td>
-       <td>
-        December 07, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-7">
-         Indianapolis Colts vs Jacksonville Jaguars
-        </a>
-       </td>
-       <td>
-        December 07, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-8">
-         Pittsburgh Steelers vs Baltimore Ravens
-        </a>
-       </td>
-       <td>
-        December 07, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 10:00 AM:00" data-start="December 07, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-9">
-         Denver Broncos vs Las Vegas Raiders
-        </a>
-       </td>
-       <td>
-        December 07, 2025 1:05 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 1:05 PM:00" data-start="December 07, 2025 1:05 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-10">
-         Chicago Bears vs Green Bay Packers
-        </a>
-       </td>
-       <td>
-        December 07, 2025 1:25 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 1:25 PM:00" data-start="December 07, 2025 1:25 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-11">
-         Los Angeles Rams vs Arizona Cardinals
-        </a>
-       </td>
-       <td>
-        December 07, 2025 1:25 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 1:25 PM:00" data-start="December 07, 2025 1:25 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-12">
-         Houston Texans vs Kansas City Chiefs
-        </a>
-       </td>
-       <td>
-        December 07, 2025 5:20 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 5:20 PM:00" data-start="December 07, 2025 5:20 PM:00">
-        </span>
-       </td>
-      </tr>
-     </tbody>
-    </table>
-    <h2>
-     NFL Schedule for Monday, December 8, 2025
     </h2>
     <table id="eventsTable">
      <thead>
