--- a/index.html
+++ b/index.html
@@ -119,29 +119,29 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/f1-streams">Formula 1: Grand Prix</td>
-                    <td>December 07, 2025 05:00 AM</td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-2">Laliga</td>
+                    <td>December 08, 2025 11:45 AM</td>
                     <td><span class="countdown-timer" data-start="December 07, 2025 05:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-1">Laliga</td>
-                    <td>December 07, 2025 05:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 07, 2025 05:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-1">Premier League</td>
+                    <td>December 08, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 08, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">Premier League</td>
-                    <td>December 07, 2025 06:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 07, 2025 06:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nba">NBA</td>
+                    <td>December 08, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 08, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NFL Week 14</td>
-                    <td>December 07, 2025 10:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 07, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</td>
+                    <td>December 08, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 08, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">Brasileirão</td>
-                    <td>December 07, 2025 11:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 07, 2025 11:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl-streams-3">NFL (MNF)</td>
+                    <td>December 08, 2025 17:15 PM</td>
+                    <td><span class="countdown-timer" data-start="December 08, 2025 17:15:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
