--- a/nba.html
+++ b/nba.html
@@ -143,98 +143,42 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Orlando Magic vs New York Knicks
+         Sacramento Kings vs Indiana Pacers
         </a>
        </td>
        <td>
-        December 07, 2025 9:00 AM
+        December 08, 2025 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 08, 2025 9:00 AM:00" data-start="December 07, 2025 9:00 AM:00">
+        <span class="countdown-timer" data-end="December 09, 2025 4:00 PM:00" data-start="December 08, 2025 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Boston Celtics vs Toronto Raptors
+         Phoenix Suns vs Minnesota Timberwolves
         </a>
        </td>
        <td>
-        December 07, 2025 12:30 PM
+        December 08, 2025 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 08, 2025 12:30 PM:00" data-start="December 07, 2025 12:30 PM:00">
+        <span class="countdown-timer" data-end="December 09, 2025 4:30 PM:00" data-start="December 08, 2025 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Denver Nuggets vs Charlotte Hornets
+         San Antonio Spurs vs New Orleans Pelicans
         </a>
        </td>
        <td>
-        December 07, 2025 3:00 PM
+        December 08, 2025 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 08, 2025 3:00 PM:00" data-start="December 07, 2025 3:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-4">
-         Portland Trail Blazers vs Memphis Grizzlies
-        </a>
-       </td>
-       <td>
-        December 07, 2025 3:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 3:00 PM:00" data-start="December 07, 2025 3:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-5">
-         Golden State Warriors vs Chicago Bulls
-        </a>
-       </td>
-       <td>
-        December 07, 2025 4:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 4:00 PM:00" data-start="December 07, 2025 4:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-6">
-         Los Angeles Lakers vs Philadelphia 76ers
-        </a>
-       </td>
-       <td>
-        December 07, 2025 4:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 4:30 PM:00" data-start="December 07, 2025 4:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-7">
-         Oklahoma City Thunder vs Utah Jazz
-        </a>
-       </td>
-       <td>
-        December 07, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 08, 2025 5:00 PM:00" data-start="December 07, 2025 5:00 PM:00">
+        <span class="countdown-timer" data-end="December 09, 2025 5:00 PM:00" data-start="December 08, 2025 5:00 PM:00">
         </span>
        </td>
       </tr>
