--- a/fighting.html
+++ b/fighting.html
@@ -98,17 +98,13 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">CRUZ vs ROACH</a></td>
-<td>December 06, 2025 14:30 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 06, 2025 14:30:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
+<td>December 08, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 08, 2025 17:00:00"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT Deadline</a></td>
-<td>December 06, 2025 15:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 06, 2025 15:00:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.live/ufc">UFC 323: Dvalishvili vs Yan 2</a></td>
-<td>December 06, 2025 15:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 06, 2025 15:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+<td>December 09, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 09, 2025 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
